service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temp-converter-service
  labels:
    app: temp-convert
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 7000
      protocol: TCP
      name: tc-svc-port
  selector:
    app: temp-conv
