ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: temp-converter-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - temp-convert.ae.dev.us-east-1.k8s.appianci.net
  rules:
  # Both external-dns and the IngressController use the "host" value here
  # For external-dns, it is the DNS entry it adds to the hosted zone
  # For the IngressController, it is used to determine where to route incoming traffic
  - host: temp-convert.ae.dev.us-east-1.k8s.appianci.net
    http:
      paths:
      - path: /
        backend:
          serviceName: temp-converter-service
          servicePort: 443
